@@ -1,0 +1,38 @@
+@extends('layouts.master')
+@section('content')
+	
+<div class="row">
+	<div class="col-md-9">
+		<div class="well">
+			<h2>Changelog</h2>
+
+
+			<h4>2013-12-20</h4>
+			<ul class="list-unstyled">
+				<li>+ Fix - Usernames now allow alpha-numeric characters</li>
+				<li>+ Update - About us page (Created Steam group)</li>
+				<li>+ Added - Changelog</li>
+			</ul>				
+
+			<h4>2013-12-19</h4>
+			<ul class="list-unstyled">
+				<li>+ Added - Comments to Posts</li>
+			</ul>				
+
+			<h4>2013-12-18</h4>
+			<ul class="list-unstyled">
+				<li>+ Added - Experience to Profile, Post, Edit</li>
+				<li>+ Added - Experience to user table</li>
+				<li>+ Added - Ability to edit posts</li>
+			</ul>	
+		</div>
+	</div>
+	<div class="col-md-3">
+		<div class="well">
+			<h4>Help with development</h4>
+			<p>Get involved and make your opinion matter through our GitHub repo <a href="https://github.com/messerli90/csgo.teamfinder">messerli90/csgo.teamfinder</a></p>
+		</div>
+	</div>
+</div>
+
+@stop
